<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/text_main" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/text_map" />
        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/ic_list_black_24px"
            android:title="@string/text_cat" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24px"
            android:title="@string/text_search" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_receipt_black_24px"
            android:title="@string/text_news" />
    </group>

    <item android:title="Аккаунт">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_circle_black_24px"
                android:title="@string/text_account" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="@string/text_help" />
        </menu>
    </item>

</menu>
